--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "dist/"
   ],
   "dependencies": {
+    "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "styled-components": "^2.2.2"
