bringing boilerplate up to date

--- a/package.json
+++ b/package.json
@@ -3,50 +3,95 @@
   "description": "BOILERPLATE-PROJECT-DESCRIPTION",
   "version": "0.0.0",
   "main": "dist/main.js",
-  "files": [
-    "dist/"
-  ],
+  "files": ["dist/"],
   "dependencies": {
+    "axios": "^0.18.0",
+    "axios-retry": "^3.0.2",
     "history": "^4.7.2",
-    "isomorphic-fetch": "^2.2.1",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
+    "ini": "^1.3.5",
+    "moment": "^2.22.1",
+    "polished": "1.9.2",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
     "react-router-redux": "^5.0.0-alpha.8",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^2.2.2"
+    "semantic-ui-less": "^2.3.1",
+    "semantic-ui-react": "0.81.1",
+    "styled-components": "^3.2.6"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-plugin-transform-node-env-inline": "^0.2.0",
-    "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.4",
-    "file-loader": "^1.1.5",
-    "node-sass": "^4.5.3",
-    "react-hot-loader": "^3.0.0-beta.6",
+    "chai": "^4.1.2",
+    "cross-env": "^5.1.5",
+    "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "4.19.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-friendly-formatter": "4.0.1",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "2.6.0",
+    "eslint-plugin-react": "^7.7.0",
+    "file-loader": "^1.1.11",
+    "ignore-styles": "^5.0.1",
+    "istanbul": "^0.4.5",
+    "jsdom": "^11.10.0",
+    "less": "^2.7.3",
+    "less-loader": "^4.1.0",
+    "mocha": "^5.1.1",
+    "nyc": "^11.7.1",
+    "pre-push": "^0.1.1",
+    "prettier": "1.12.1",
+    "prettylint": "1.0.0",
+    "react-hot-loader": "^4.1.2",
     "redux-devtools": "^3.4.1",
-    "redux-devtools-dock-monitor": "^1.1.2",
-    "redux-devtools-log-monitor": "^1.3.0",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.4.0",
     "redux-logger": "^3.0.6",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.0"
+    "sinon": "^5.0.3",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.2",
+    "webpack-dev-server": "^3.1.3"
   },
   "peerDependencies": {},
   "scripts": {
-    "build": "webpack --config webpack/webpack.config.js -p --display-error-details --progress --optimize-minimize",
-    "dev:hot": "webpack-dev-server --config webpack/webpack.config-dev.js"
+    "build":
+      "webpack --config webpack/webpack.config.js -p --display-error-details --progress --optimize-minimize",
+    "prebuild": "mkdir -p .nyc_output && npm run test",
+    "dev":
+      "webpack-dev-server --config webpack/webpack.config-dev.js --mode development --open",
+    "dev:local": "cross-env NODE_ENV=local npm run dev",
+    "pretest": "mkdir -p .nyc_output && npm run lint && npm run test:coverage",
+    "test": "cross-env NODE_ENV=test npm run test:unit",
+    "test:coverage":
+      "cross-env NODE_ENV=test nyc check-coverage --lines 0 --per-file && echo 'Coverage passed'",
+    "test:solo":
+      "nyc --reporter=html nyc mocha -w test/tests/js/components/Conversation/ListView/ListItem/index-test.js",
+    "test:unit":
+      "cross-env NODE_ENV=test nyc --reporter=html nyc mocha test/**/*-test.js",
+    "test:watch": "cross-env NODE_ENV=test nyc mocha -w test/**/*-test.js",
+    "lint":
+      "eslint . --format node_modules/eslint-friendly-formatter && echo 'Linting passed'",
+    "prelint":
+      "eslint --print-config .eslintrc.json | eslint-config-prettier-check",
+    "reinstall":
+      "rm -rf node_modules package-lock.json && npm install --save-dev"
   },
   "repository": {},
   "keywords": [],
