--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
       "webpack --config webpack/webpack.config.js -p --display-error-details --progress --optimize-minimize",
     "prebuild": "mkdir -p .nyc_output && npm run test",
     "dev":
-      "webpack-dev-server --config webpack/webpack.config-dev.js --mode development --open",
+      "webpack-dev-server --config webpack/webpack.config-dev.js --mode development",
     "dev:local": "cross-env NODE_ENV=local npm run dev",
     "pretest": "mkdir -p .nyc_output && npm run lint && npm run test:coverage",
     "test": "cross-env NODE_ENV=test npm run test:unit",
