tests working within docker container

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
   "rules": {
     "prettier/prettier": "error",
     "react/display-name": "off",
-    "react/no-unknown-property": [0]
+    "react/no-unknown-property": [0],
+    "react/prop-types": 0
   }
 }
